--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ services:
 before_install:
   - docker-compose up -d
   - docker ps -a
+
+script:
+  - cargo build --verbose
+  - RUST_TEST_THREADS=1 cargo test --verbose
